--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             background-color: #d0b884; 
             text-decoration: none; /* Remove underline from text */
         }
-        .link-element: hover {
-            text-decoration:underline
+        .link-element:hover {
+            text-decoration: underline; /* Add underline on hover */
         }
         .link-element::after {
             content: '';
