--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <p>now has a website!</p>
         </div>
         <div class="additional-text">
-            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! links to be added...
+            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! this website settles for mediocrity and that's why you like it. <3 links to be added...
         </div>
         <div class="imagecaption">
             Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
