--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             display: inline-block;
             font-family: 'Pixelon', sans-serif;
             font-size: 20px;
-            color: #f2EAD3;
-            text-shadow: 2px 2px #86BBBD;
+            color: #543D0D;
+            text-shadow: 2px 2px #D0B884;
             padding: 8px; /* Add padding for background */
-            background-color: #d0b884; 
+            background-color: #F2EAD3; 
             text-decoration: none; /* Remove underline from text */
         }
         .link-element:hover {
@@ -111,11 +111,11 @@
             position: absolute;
             top: 3px;
             left: 3px;
-            background-color: #543d0d;
+            background-color: #86BBBD;
             width: 100%; /* Adjust width to cover full element */
             height: 100%; /* Adjust height to cover full element */
             z-index: -1;
-            box-shadow: 2px 2px #382806;
+            box-shadow: 2px 2px #9D6381;
         }
         @keyframes textResize {
             0%, 100% {
