--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             position: absolute;
             top: 3px;
             left: 3px;
-            background-color: #86BBBD;
+            background-color: #D0B884;
             width: 100%; /* Adjust width to cover full element */
             height: 100%; /* Adjust height to cover full element */
             z-index: -1;
-            box-shadow: 2px 2px #9D6381;
+            box-shadow: 3px 3px #543D0D;
         }
         @keyframes textResize {
             0%, 100% {
