--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -19,11 +19,11 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #f2ead3; /* Changed background color */
+            background-color: #EDD2E3; /* Changed background color */
             margin: 0;
             padding: 0;
             font-family: 'Press Start 2P', sans-serif;
-            color: #543d0d; /* Changed text color */
+            color: #D5A454; /* Changed text color */
         }
 
         .heading-text {
@@ -34,7 +34,7 @@
         .heading-text h1 {
             font-size: 50px; /* Changed font size */
             margin: 0;
-            text-shadow: 5.5px 2px #bd9b55;
+            text-shadow: 5.5px 2px #AE3179;
         }
 
         .heading-text p,
@@ -43,17 +43,17 @@
             margin: 8px 0 0 0;
             font-size: 34px;
             text-decoration: none;
-            color: #543d0d;
+            color: #84D6DD;
         }
 
         .heading-text a:hover {
-            text-shadow: 2px 2px #bd9b55;
+            text-shadow: 2px 2px #D5A454;
             text-decoration: underline;
         }
     </style>
     </head>
 <body>
     <div class="heading-text">
-        <h1>ART FROM THE VILAGE, NY ~ 2024</h1>
+        <h1>ART FROM THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
