--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -54,6 +54,6 @@
     </head>
 <body>
     <div class="heading-text">
-        <h1>ART FROM THE VILLAGE, NY ~ 2024</h1>
+        <h1>s/STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
