--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -32,7 +32,7 @@
         }
 
         .heading-text h1 {
-            font-size: 50px; /* Changed font size */
+            font-size: 40px; /* Changed font size */
             margin: 0;
             text-shadow: 5.5px 2px #AE3179;
         }
@@ -54,6 +54,6 @@
     </head>
 <body>
     <div class="heading-text">
-        <h1>s/STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
+        <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
