--- a/index.html
+++ b/index.html
@@ -117,6 +117,37 @@
             z-index: -1;
             box-shadow: 3px 3px #543D0D;
         }
+        .link2-container {
+            margin-top: 10px; /* Margin to position the link slightly below the image */
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+        .link2-element {
+            position: relative;
+            display: inline-block;
+            font-family: 'Pixelon', sans-serif;
+            font-size: 20px;
+            color: #D5A454;
+            text-shadow: 2px 2px #AE3179;
+            padding: 8px; /* Add padding for background */
+            background-color: #EDD2E3; 
+            text-decoration: none; /* Remove underline from text */
+        }
+        .link2-element:hover {
+            text-decoration: underline; /* Add underline on hover */
+        }
+        .link2-element::after {
+            content: '';
+            position: absolute;
+            top: 3px;
+            left: 3px;
+            background-color: #84D6DD;
+            width: 100%; /* Adjust width to cover full element */
+            height: 100%; /* Adjust height to cover full element */
+            z-index: -1;
+            box-shadow: 3px 3px #D5A454;
+        }
         @keyframes textResize {
             0%, 100% {
                 font-size: 1.5em;
@@ -155,6 +186,11 @@
     <div class="link-container">
         <a href="https://kovid-pal-odouard.github.io/mamaroneck-2023/" class="link-element" target="_blank">
             art from mamaroneck 2023
+        </a>
+    </div>
+    <div class="link2-container">
+        <a href="https://kovid-pal-odouard.github.io/thevillage-2024/" class="link-element" target="_blank">
+            stuff from the village 2024
         </a>
     </div>
 </body>
