--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </a>
     </div>
     <div class="link2-container">
-        <a href="https://kovid-pal-odouard.github.io/thevillage-2024/" class="link-element" target="_blank">
+        <a href="https://kovid-pal-odouard.github.io/thevillage-2024/" class="link2-element" target="_blank">
             stuff from the village 2024
         </a>
     </div>
