text shadow inversion on button

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             display: inline-block;
             font-family: 'Pixelon', sans-serif;
             font-size: 20px;
-            color: #D5A454;
-            text-shadow: 2px 2px #AE3179;
+            color: #AE3179;
+            text-shadow: 2px 2px #D5A454;
             padding: 8px; /* Add padding for background */
             background-color: #EDD2E3; 
             text-decoration: none; /* Remove underline from text */
