--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -183,12 +183,12 @@
         <body>second half of april, 2023: paint marker, acrylic, ink + dip pen, micron. he has a mullet and five eyes; he is alive.</body>
     </div>    
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/7aiKASJwWJAFSDEFQs4Asa?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <div class="caption" style="margin-bottom: 25px;">
+    <div class="caption" style="margin-bottom: 40px;">
         <h2>on the urban banyans of kolkata</h2>
         <body>written in april, recorded in may 2023: an audio piece i did for evan madin's mamaroneck public radio. <a href="https://soundcloud.com/evan-madin/season-7-episode-3-spaced-out" class="link-element" target="_blank">soundcloud link here!</a> it's also on the apple podcasts app but to hell with that.</body>
     </div>    
     <div class="caption" style="margin-bottom: 25px;">
-        <body>p.s. shoutout to <a href="https://jillshoffiett.com/home.html" class="link-element" target="_blank">jill shoffiett</a>, who was my art teacher at mamaroneck high school and while i made all of this. her framing of art-making in terms of composition and markmaking (formal aspects > nebulous ideas) made me relate to the act of creation on a level i never had before.</body>
+        <body>p.s. shoutout to <a href="https://jillshoffiett.com/home.html" class="link-element" target="_blank">jill shoffiett</a>, who was my art teacher at mamaroneck high school and while i made all of this. her framing of art-making in terms of composition and markmaking (formal aspects > nebulous ideas) made me relate to the act of creation on a level i never had before. also to polina!</body>
     </div>   
 </body>
 </html>
