--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
     </div>
     <div class="link-container">
         <a href="https://kovid-pal-odouard.github.io/mamaroneck-2023/" class="link-element" target="_blank">
-            art from mamaroneck 2023
+            art from mamaroneck ~2023
         </a>
     </div>
     <div class="link2-container">
         <a href="https://kovid-pal-odouard.github.io/thevillage-2024/" class="link2-element" target="_blank">
-            stuff from the village 2024
+            stuff from the village ~2024
         </a>
     </div>
 </body>
