--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -76,29 +76,33 @@
             text-align: left;
             font-family: 'Pixelon', sans-serif;
             margin-top: 10px;
-            color: #543d0d;
             width: 1080px; /* Set width to match main image */
         }
 
         .caption h2 {
-            font-size: 1.7em;
-            text-shadow: 2px 2px #bd9b55;
+            font-size: 25px;
+            color: #AE3179
+            text-shadow: 2px 2px #D5A454;
             margin: 0;
         }
 
         .caption body {
-            font-size: 1.2em;
+            font-size: 15px;
+            color: #84D6DD
             margin: 5px 0 0 0;
         }
 
         .caption a {
-            color: #9D6381;
-            text-shadow: 1.5px 1.5px #86BBBD;
-            text-decoration: none;
+            color: #84D6DD;
+            text-shadow: 1.5px 1.5px #E7EFC1;
+            text-decoration: underline
+
         }
 
         .caption a:hover {
-            text-decoration: underline;
+            text-color: #E7EFC1
+            text-shadow: 3px 3px #84D6DD
+            text-decoration: underline
         }
     </style>
     </head>
@@ -107,3 +111,19 @@
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
+  </div>
+  <img class="main-image" src="/mamaroneck-2023/thoughtful_foreigner.jpg" alt="portrait of a thoughtful foreigner">
+  <div class="detail-images" style="--n: 2;">
+      <img src="/mamaroneck-2023/thoughtful_foreigner_detail.jpg" alt="detail - portrait of a thoughtful foreigner">
+      <img src="/mamaroneck-2023/thoughtful_foreigner_process.jpg" alt="detail - portrait of a thoughtful foreigner">
+  </div>
+  <div class="caption" style="margin-bottom: 20px;">
+      <h2>these diasporic feet</h2>
+      <body>december, i.e. finals season, 2023: what i made to round off the semester for sukhdev sandhu's class on the histories and literatures of the south asian diaspora. i feel like this sensitized me to appreciating the poetics of certain sorts of life (in this case, diasporic ones) in art. if i had to pick 3 things to recommend you take a look at from sukhdev's syllabus (and imma shy away from the classics so that the recs are interesting), i'd go with david dabydeen's <a href="https://www.goodreads.com/en/book/show/706270" class="link-element" target="_blank">The Counting House:</a> i think what i fucked with about this book is what a lot of readers find jarring, which is some combination of the rawness of the language (it's largely written in guyanese creole) and the vulgarity of the characters. as dabydeen himself puts it, "out of this matrix of spirit and earth is born a language that is both lyrical and barbaric" (check out On Not Being Milton: N-- Talk In England Today). looking back at / reading / reconstructing india through this language -- one born out of turbulent relocations and the violence of plantation life -- opened the possibilities of thinking diasporically for me.</body>
+      <body> next i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itslef. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that. </body>
+      <body> well i know i said 3 but i guess it's gonna be like 4 1/2 with the dabydeen essay sidebar and this..... check out philip scheffner<a href="https://www.filmgalerie451.de/en/films/the-halfmoon-files" class="link-element" target="_blank">the halfmoon files.</a> how many ghosts do humanity's modern endeavors create?</body>
+  </div>
+  <div class="caption" style="margin-bottom: 20px;">
+      <body>anyway, this is supposed to be a blurb about "these diasporic feet." tbh i wasn't gonna put these on the website because the time constraint just meant that i didn't get to set with the project for as long as i might have liked. plus i didn't have a proper adhesive to attach the paper to the painting so it just looks janky. but anyway, this site is good bc it settles for mediocrity! and i think the project represents an important moment in my art, in that -- although it was rushed and done in a time that turns you into the academic analogue of the "automatic motor in a fractional operation" -- it was important in that it's one of my first "artistic" (if it qualifies) reflections on diasporic life. that's kind of what i wanna be doing -- making art that feels it way through life lived in the diaspora, life lived in a globalized capitalist world, life lived in urban/suburban spaces. </body>
+      <body>so, i made these poems where i imagine my feet to have their own consciousness and write from their perspective, and feel their way through diasporic life.</body>
+  </div>
