--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -112,15 +112,20 @@
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
   </div>
-  <img class="main-image" src="/mamaroneck-2023/thoughtful_foreigner.jpg" alt="portrait of a thoughtful foreigner">
-  <div class="detail-images" style="--n: 2;">
-      <img src="/mamaroneck-2023/thoughtful_foreigner_detail.jpg" alt="detail - portrait of a thoughtful foreigner">
-      <img src="/mamaroneck-2023/thoughtful_foreigner_process.jpg" alt="detail - portrait of a thoughtful foreigner">
-  </div>
-  <div class="caption" style="margin-bottom: 20px;">
+  <div class="caption" style="margin-bottom: 15px;">
       <h2>these diasporic feet</h2>
-      <body>december, i.e. finals season, 2023: poetry on some acrylic. what i made to round off the semester for sukhdev sandhu's class on the histories and literatures of the south asian diaspora. i feel like this sensitized me to appreciating the poetics of certain sorts of life (in this case, diasporic ones) in art. if i had to pick 3 things to recommend you take a look at from sukhdev's syllabus (and imma shy away from the classics so that the recs are interesting), i'd go with david dabydeen's <a href="https://www.goodreads.com/en/book/show/706270" class="link-element" target="_blank">The Counting House:</a> i think what i fucked with about this book is what a lot of readers find jarring, which is some combination of the rawness of the language (it's largely written in guyanese creole) and the vulgarity of the characters. as dabydeen himself puts it, "out of this matrix of spirit and earth is born a language that is both lyrical and barbaric" (check out On Not Being Milton: N-- Talk In England Today). looking back at / reading / reconstructing india through this language -- one born out of turbulent relocations and the violence of plantation life -- opened the possibilities of thinking diasporically for me.</body>
-      <body> next i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itslef. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that. </body>
+      <body>december, i.e. finals season, 2023: poetry on some acrylic. what i made to round off the semester for sukhdev sandhu's class on the histories and literatures of the south asian diaspora. i feel like this sensitized me to appreciating the poetics of certain sorts of life (in this case, diasporic ones) in art.</body>
+  </div>
+  <div class="caption" style="margin-bottom: 15px;">
+      <body>if i had to pick 3 things to recommend you take a look at from sukhdev's syllabus (and imma shy away from the classics so that the recs are interesting), i'd go with david dabydeen's <a href="https://www.goodreads.com/en/book/show/706270" class="link-element" target="_blank">The Counting House:</a> i think what i fucked with about this book is what a lot of readers find jarring, which is some combination of the rawness of the language (it's largely written in guyanese creole) and the vulgarity of the characters. as dabydeen himself puts it, "out of this matrix of spirit and earth is born a language that is both lyrical and barbaric" (check out On Not Being Milton: N-- Talk In England Today). looking back at / reading / reconstructing india through this language -- one born out of turbulent relocations and the violence of plantation life -- opened the possibilities of thinking diasporically for me.</body>
+  </div>    
+  <div class="caption" style="margin-bottom: 15px;">
+      <body>for the expensive (no sailing the high seas, as they say, for this one) pick, i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itslef. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that.</body>
+  </div>    
+  <div class="caption" style="margin-bottom: 15px;">
+      <body>hari kunzru's <a href="https://www.goodreads.com/book/show/429653.Transmission" class="link-element" target="_blank">transmission</a> i also fuck with (accidental yoda syntax there for some reason), it's attuned the poetics of the digital in a way i haven't seen before.</body>
+  </div>   
+  <div class="caption" style="margin-bottom: 15px;">    
       <body> well i know i said 3 but i guess it's gonna be like 4 1/2 with the dabydeen essay sidebar and this..... check out philip scheffner<a href="https://www.filmgalerie451.de/en/films/the-halfmoon-files" class="link-element" target="_blank">the halfmoon files.</a> how many ghosts do humanity's modern endeavors create?</body>
   </div>
   <div class="caption" style="margin-bottom: 20px;">
