--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -81,31 +81,30 @@
 
         .caption h2 {
             font-size: 25px;
-            color: #AE3179
-            text-shadow: 2px 2px #D5A454;
+            color: #AE3179;
+            text-shadow: 2px 2px #E7EFC1;
             margin: 0;
         }
 
         .caption body {
             font-size: 15px;
-            color: #84D6DD
+            color: #D5A454;
             margin: 5px 0 0 0;
         }
 
         .caption a {
             color: #84D6DD;
             text-shadow: 1.5px 1.5px #E7EFC1;
-            text-decoration: underline
-
+            text-decoration: underline;
         }
 
         .caption a:hover {
-            text-color: #E7EFC1
-            text-shadow: 3px 3px #84D6DD
-            text-decoration: underline
+            color: #E7EFC1;
+            text-shadow: 3px 3px #84D6DD;
+            text-decoration: underline;
         }
     </style>
-    </head>
+</head>
 <body>
     <div class="heading-text">
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
