--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -19,20 +19,20 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #EDD2E3; /* Changed background color */
+            background-color: #EDD2E3;
             margin: 0;
             padding: 0;
             font-family: 'Press Start 2P', sans-serif;
-            color: #D5A454; /* Changed text color */
+            color: #D5A454;
         }
 
         .heading-text {
-            text-align: center; /* Center aligning */
-            margin-top: 10px; /* Added margin to move text down */
+            text-align: center;
+            margin-top: 10px;
         }
 
         .heading-text h1 {
-            font-size: 40px; /* Changed font size */
+            font-size: 40px;
             margin: 0;
             text-shadow: 5.5px 2px #AE3179;
         }
@@ -65,8 +65,6 @@
         }
 
         .detail-images img {
-            /* Calculate the width based on the number of images */
-            /* Adjust the margin for the first and last images */
             width: calc((1080px - 15px * (var(--n) - 1)) / var(--n));
             height: auto;
             object-fit: cover;
@@ -76,7 +74,7 @@
             text-align: left;
             font-family: 'Pixelon', sans-serif;
             margin-top: 10px;
-            width: 1080px; /* Set width to match main image */
+            width: 1080px;
         }
 
         .caption h2 {
@@ -86,7 +84,7 @@
             margin: 0;
         }
 
-        .caption body {
+        .caption p {
             font-size: 15px;
             color: #AE3179;
             margin: 5px 0 0 0;
@@ -110,36 +108,30 @@
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
-  </div>
-  <div class="caption" style="margin-bottom: 15px;">
-      <h2>these diasporic feet</h2>
-      <body>december, i.e. finals season, 2023: mid poetry on some acrylic. what i made to round off the semester for sukhdev sandhu's class on the histories and literatures of the south asian diaspora. i feel like the class sensitized me to appreciating the poetics of certain *sorts of life* ... in this case, diasporic ones ... in art.</body>
-  </div>
-  <div class="caption" style="margin-bottom: 15px;">
-      <body>if i had to pick 3 things to recommend you take a look at from sukhdev's syllabus (and imma shy away from the classics so that the recs are interesting), i'd go with david dabydeen's <a href="https://www.goodreads.com/en/book/show/706270" class="link-element" target="_blank">The Counting House:</a> i think what i fucked with about this book is what a lot of readers find jarring, which is some combination of the rawness of the language (it's largely written in guyanese creole) and the vulgarity of the characters. as dabydeen himself puts it, "out of this matrix of spirit and earth is born a language that is both lyrical and barbaric" (check out On Not Being Milton: N-- Talk In England Today). looking back at / reading / reconstructing india through this language -- one born out of turbulent relocations and the violence of plantation life -- opened up the world of possibilities of what it can mean to think diasporically for me.</body>
-  </div>    
-  <div class="caption" style="margin-bottom: 15px;">
-      <body>for the expensive pick (no sailing the high seas, as they say, for this one), i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itslef. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that.</body>
-  </div>    
-  <div class="caption" style="margin-bottom: 15px;">
-      <body>hari kunzru's <a href="https://www.goodreads.com/book/show/429653.Transmission" class="link-element" target="_blank">transmission</a> i also fuck with (accidental yoda syntax there for some reason). it's attuned the poetics of the digital in a way i haven't seen before.</body>
-  </div>   
-  <div class="caption" style="margin-bottom: 15px;">    
-      <body> well i know i said 3 but i guess it's gonna be like 4 3/4 with the dabydeen essay sidebar and this..... check out philip scheffner's <a href="https://www.filmgalerie451.de/en/films/the-halfmoon-files" class="link-element" target="_blank">the halfmoon files!</a> or if that's too much and you speak punjabi then <a href="https://www.youtube.com/watch?v=DwZgboaU484" class="link-element" target="_blank">listen to this.</a> how many ghosts do humanity's modern endeavors create?</body>
-  </div>
-  <div class="caption" style="margin-bottom: 20px;">
-      <body>anyway, this is supposed to be a blurb about "these diasporic feet." tbh i wasn't gonna put this on the website because the time constraint just meant that i didn't get to set with the project for as long as i might have liked. plus i didn't have a proper adhesive to attach the paper to the painting so it just looks janky and i am by no means a poet (or anything at all really, but especially a not a poet). but anyway, this site is good bc it settles for mediocrity! and i think the project represents an important moment in my art, in that -- although it was rushed and done in a time that turns you into the academic analogue of the "automatic motor in a fractional operation" -- it was important in that it's one of my first "artistic" (if it qualifies) reflections on diasporic life. that's kind of what i wanna be doing -- making art that feels it way through life lived in the diaspora, life lived in a globalized capitalist world, life lived in urban/suburban spaces. </body>
-      <body>so, i wrote these mid poems where i imagine my feet to have their own consciousness and write from their perspective, and feel their way through diasporic life. shoutout to sukhdev sandhu for taking me there.</body>
-  </div>
-  <div class="detail-images" style="--n: 2;">
-      <img src="/thevillage-2024/diasporic_feet1" alt="intro">
-      <img src="/thevillage-2024/diasporic_feet2" alt="intro ctd">
-  <div class="detail-images" style="--n: 2;">
-      <img src="/thevillage-2024/diasporic_feet3" alt="work">
-      <img src="/thevillage-2024/diasporic_feet4" alt="asian overdrive">
-  <img class="main-image" src="/thevillage-2024/diasporic_feet5" alt="us and">
-  <div class="detail-images" style="--n: 2;">
-      <img src="/thevillage-2024/diasporic_feet6" alt="expressive">
-      <img src="/thevillage-2024/diasporic_feet7" alt="like chill animals">
-  </div>
-
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>these diasporic feet</h2>
+        <p>december, i.e. finals season, 2023: mid poetry on some acrylic. what i made to round off the semester for sukhdev sandhu's class on the histories and literatures of the south asian diaspora. i feel like the class sensitized me to appreciating the poetics of certain *sorts of life* ... in this case, diasporic ones ... in art.</p>
+    </div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <p>if i had to pick 3 things to recommend you take a look at from sukhdev's syllabus (and imma shy away from the classics so that the recs are interesting), i'd go with david dabydeen's <a href="https://www.goodreads.com/en/book/show/706270" class="link-element" target="_blank">The Counting House:</a> i think what i fucked with about this book is what a lot of readers find jarring, which is some combination of the rawness of the language (it's largely written in guyanese creole) and the vulgarity of the characters. as dabydeen himself puts it, "out of this matrix of spirit and earth is born a language that is both lyrical and barbaric" (check out On Not Being Milton: N-- Talk In England Today). looking back at / reading / reconstructing india through this language -- one born out of turbulent relocations and the violence of plantation life -- opened up the world of possibilities of what it can mean to think diasporically for me.</p>
+    </div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <p>for the expensive pick (no sailing the high seas, as they say, for this one), i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itslef. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that.</p>
+    </div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <p>hari kunzru's <a href="https://www.goodreads.com/book/show/429653.Transmission" class="link-element" target="_blank">transmission</a> i also fuck with (accidental yoda syntax there for some reason). it's attuned the poetics of the digital in a way i haven't seen before.</p>
+    </div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <p> well i know i said 3 but i guess it's gonna be like 4 3/4 with the dabydeen essay sidebar and this..... check out philip scheffner's <a href="https://www.filmgalerie451.de/en/films/the-halfmoon-files" class="link-element" target="_blank">the halfmoon files!</a> or if that's too much and you speak punjabi then <a href="https://www.youtube.com/watch?v=DwZgboaU484" class="link-element" target="_blank">listen to this.</a> how many ghosts do humanity's modern endeavors create?</p>
+    </div>
+    <div class="caption" style="margin-bottom: 20px;">
+        <p>anyway, this is supposed to be a blurb about "these diasporic feet." tbh i wasn't gonna put this on the website because the time constraint just meant that i didn't get to set with the project for as long as i might have liked. plus i didn't have a proper adhesive to attach the paper to the painting so it just looks janky and i am by no means a poet (or anything at all really, but especially a not a poet). but anyway, this site is good bc it settles for mediocrity! and i think the project represents an important moment in my art, in that -- although it was rushed and done in a time that turns you into the academic analogue of the "automatic motor in a fractional operation" -- it was important in that it's one of my first "artistic" (if it qualifies) reflections on diasporic life. that's kind of what i wanna be doing -- making art that feels it way through life lived in the diaspora, life lived in a globalized capitalist world, life lived in urban/suburban spaces. </p>
+        <p>so, i wrote these mid poems where i imagine my feet to have their own consciousness and write from their perspective, and feel their way through diasporic life. shoutout to sukhdev sandhu for taking me there.</p>
+    </div>
+    <div class="detail-images" style="--n: 2;">
+        <img src="/thevillage-2024/diasporic_feet1" alt="intro">
+        <img src="/thevillage-2024/diasporic_feet2" alt="intro ctd">
+    </div>
+    <div class="detail-images" style="--n: 2;">
+        <img src="/thevillage-2024/diasporic_feet3" alt="work">
+        <img src="/thevillage-2024/diasporic_feet4" alt="asian overdrive">
