--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -136,7 +136,10 @@
         <img src="/thevillage-2024/diasporic_feet3" alt="work">
         <img src="/thevillage-2024/diasporic_feet4" alt="asian overdrive">
     <div class="main-image" style="margin-bottom: 20px;">
-        <img src="/thevillage-2024/diasporic_feet5" alt="asian overdrive">
+        <img src="/thevillage-2024/diasporic_feet5" alt="memories">
     <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet6" alt="work">
-        <img src="/thevillage-2024/diasporic_feet7" alt="asian overdrive">
+        <img src="/thevillage-2024/diasporic_feet6" alt="expressive feet">
+        <img src="/thevillage-2024/diasporic_feet7" alt="feelin good">
+    </div>
+</body>
+</html>
