--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -80,13 +80,13 @@
         .caption h2 {
             font-size: 25px;
             color: #AE3179;
-            text-shadow: 2px 2px #E7EFC1;
+            text-shadow: 2px 2px #D5A454;
             margin: 0;
         }
 
         .caption p {
             font-size: 15px;
-            color: #D5A454;
+            color: #AE3179;
             margin: 5px 0 0 0;
         }
 
