--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -129,17 +129,17 @@
         <p>so, i wrote these mid poems where i imagine my feet to have their own consciousness and write from their perspective, and feel their way through diasporic life. shoutout to sukhdev sandhu for taking me there.</p>
     </div>
     <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet1" alt="intro">
-        <img src="/thevillage-2024/diasporic_feet2" alt="intro ctd">
+        <img src="/thevillage-2024/diasporic_feet1.jpg" alt="intro">
+        <img src="/thevillage-2024/diasporic_feet2.jpg" alt="intro ctd">
     </div>
     <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet3" alt="work">
-        <img src="/thevillage-2024/diasporic_feet4" alt="asian overdrive">
+        <img src="/thevillage-2024/diasporic_feet3.jpg" alt="work">
+        <img src="/thevillage-2024/diasporic_feet4.jpg" alt="asian overdrive">
     <div class="main-image" style="margin-bottom: 20px;">
         <img src="/thevillage-2024/diasporic_feet5" alt="memories">
     <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet6" alt="expressive feet">
-        <img src="/thevillage-2024/diasporic_feet7" alt="feelin good">
+        <img src="/thevillage-2024/diasporic_feet6.jpg" alt="expressive feet">
+        <img src="/thevillage-2024/diasporic_feet7.jpg" alt="feelin good">
     </div>
 </body>
 </html>
