text Δ and image fix

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -79,8 +79,8 @@
 
         .caption h2 {
             font-size: 32px;
-            color: #AE3179;
-            text-shadow: 2px 2px #D5A454;
+            color: #D5A454;
+            text-shadow: 2px 2px #AE3179;
             margin: 0;
         }
 
@@ -139,7 +139,7 @@
         <img src="/thevillage-2024/diasporic_feet4.jpg" alt="asian overdrive">
     </div>
     <div class="main-image" style="margin-bottom: 20px;">
-        <img src="/thevillage-2024/diasporic_feet5" alt="memories">
+        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="memories">
     </div>
     <div class="detail-images" style="--n: 2;">
         <img src="/thevillage-2024/diasporic_feet6.jpg" alt="expressive feet">
