--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kovid pal odouard: mamaroneck 2023</title>
+    <title>kovid pal odouard: the village 2024</title>
     <style>
         @font-face {
             font-family: 'Press Start 2P';
