double shadow on h2

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -79,8 +79,8 @@
 
         .caption h2 {
             font-size: 32px;
-            color: #D5A454;
-            text-shadow: 2px 2px #AE3179;
+            color: #AE3179;
+            text-shadow: 1px 1px #D5A454, 2px 2px #E7EFC1;
             margin: 0;
         }
 
