attempt to make detail image work like main

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -138,9 +138,9 @@
         <img src="/thevillage-2024/diasporic_feet3.jpg" alt="work">
         <img src="/thevillage-2024/diasporic_feet4.jpg" alt="asian overdrive">
     </div>
-    <div class="main-image" style="margin-bottom: 20px;">
-        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="memories">
-    </div>
+    <div class="detail-images" style="--n: 1;">
+        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="work">
+    </div>    
     <div class="detail-images" style="--n: 2;">
         <img src="/thevillage-2024/diasporic_feet6.jpg" alt="expressive feet">
         <img src="/thevillage-2024/diasporic_feet7.jpg" alt="feelin good">
