--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -34,7 +34,7 @@
         .heading-text h1 {
             font-size: 40px;
             margin: 0;
-            text-shadow: 5.5px 2px #AE3179;
+            text-shadow: 5.5px 2px #AE3179, 8px 4px #E7EFC1;
         }
 
         .heading-text p,
@@ -80,7 +80,7 @@
         .caption h2 {
             font-size: 32px;
             color: #AE3179;
-            text-shadow: 1px 1px #D5A454, 2px 2px #E7EFC1;
+            text-shadow: 2px 2px #D5A454, 3.5px 3.5px #E7EFC1;
             margin: 0;
         }
 
