--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -34,7 +34,7 @@
         .heading-text h1 {
             font-size: 40px;
             margin: 0;
-            text-shadow: 5.5px 2px #AE3179, 8px 4px #E7EFC1;
+            text-shadow: 5.5px 2px #AE3179, 8px 4px #AE3179;
         }
 
         .heading-text p,
