nevermind with the two ty[es

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -69,21 +69,6 @@
             height: auto;
         }
 
-        }
-
-        .detail-images2 {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 15px;
-            width: 1080px;
-        }
-
-        .detail-images2 img {
-            width: calc((1080px - 15px * (var(--n) - 1)) / var(--n));
-            height: auto;
-            object-fit: contain;
-        }
-
         .caption {
             text-align: left;
             font-family: 'Pixelon', sans-serif;
@@ -148,7 +133,7 @@
         <img src="/thevillage-2024/diasporic_feet1.jpg" alt="intro">
         <img src="/thevillage-2024/diasporic_feet2.jpg" alt="intro ctd">
     </div>
-    <div class="detail-images2" style="--n: 2;">
+    <div class="detail-images" style="--n: 2;">
         <img src="/thevillage-2024/diasporic_feet3.jpg" alt="work">
         <img src="/thevillage-2024/diasporic_feet4.jpg" alt="asian overdrive">
     </div>
