--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -188,7 +188,7 @@
         <body>written in april, recorded in may 2023: an audio piece i did for evan madin's mamaroneck public radio. <a href="https://soundcloud.com/evan-madin/season-7-episode-3-spaced-out" class="link-element" target="_blank">soundcloud link here!</a> it's also on the apple podcasts app but to hell with that.</body>
     </div>    
     <div class="caption" style="margin-bottom: 25px;">
-        <body>p.s. shoutout to <a href="https://jillshoffiett.com/home.html" class="link-element" target="_blank">jill shoffiett</a>, who was my art teacher at mamaroneck high school and while i made all of this. her framing of art-making in terms of composition and markmaking (formal aspects > nebulous ideas) made me relate to the act of creation on a level i never had before. also to polina!</body>
+        <body>p.s. shoutout to <a href="https://jillshoffiett.com/home.html" class="link-element" target="_blank">jill shoffiett</a>, who was my art teacher at mamaroneck high school and while i made all of this. her framing of art-making in terms of composition and markmaking (formal aspects > nebulous ideas) made me relate to the act of creation on a level i never had before. also to shoutout to polina!</body>
     </div>   
 </body>
 </html>
