--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -67,6 +67,7 @@
         .detail-images img {
             width: calc((1080px - 15px * (var(--n) - 1)) / var(--n));
             height: auto;
+            object-fit: cover;
         }
 
         .caption {
