bottom margin fix

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -141,7 +141,7 @@
     <div class="detail-images" style="--n: 1;">
         <img src="/thevillage-2024/diasporic_feet5.jpg" alt="work">
     </div>    
-    <div class="detail-images" style="--n: 2;" style="margin-bottom: 20px;">
+    <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
         <img src="/thevillage-2024/diasporic_feet6.jpg" alt="expressive feet">
         <img src="/thevillage-2024/diasporic_feet7.jpg" alt="feelin good">
     </div>
