typo and translation

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -120,7 +120,7 @@
         <p>if i had to pick 3 things to recommend you take a look at from sukhdev's syllabus (and imma shy away from the classics so that the recs are interesting), i'd go with david dabydeen's <a href="https://www.goodreads.com/en/book/show/706270" class="link-element" target="_blank">The Counting House:</a> i think what i fucked with about this book is what a lot of readers find jarring about it, which is some combination of the rawness of the language (it's largely written in guyanese creole) and the vulgarity of the characters. as dabydeen himself puts it, "out of this matrix of spirit and earth is born a language that is both lyrical and barbaric" (check out "On Not Being Milton: N-- Talk In England Today"). looking back at / reading / reconstructing india through this language -- one born out of turbulent relocations and the violence of plantation life -- opened up the world of possibilities of what it can mean to think diasporically for me.</p>
     </div>
     <div class="caption" style="margin-bottom: 15px;">
-        <p>for the expensive pick (no sailing the high seas, as they say, for this one), i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itslef. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that.</p>
+        <p>for the expensive pick (no sailing the high seas, as they say, for this one), i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itself. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that.</p>
     </div>
     <div class="caption" style="margin-bottom: 15px;">
         <p>hari kunzru's <a href="https://www.goodreads.com/book/show/429653.Transmission" class="link-element" target="_blank">Transmission</a> i also fuck with. accidental yoda syntax there for some reason. it's attuned the poetics of the digital in a way i haven't seen before.</p>
@@ -135,7 +135,7 @@
         <p>so, i wrote these mid poems where i imagine my feet to have their own consciousness and write from their perspective, and feel their way through diasporic life. shoutout to sukhdev sandhu for taking me there.</p>
     </div>
     <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet1.jpg" alt="intro">
+        <img src="/thevillage-2024/diasporic_feet1.png" alt="intro">
         <img src="/thevillage-2024/diasporic_feet2.jpg" alt="intro ctd">
     </div>
     <div class="detail-images" style="--n: 2;">
