--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -150,7 +150,7 @@
     <img class="main-image" src="/mamaroneck-2023/rock_map_thing.jpg" alt="rockmap">
     <div class="caption" style="margin-bottom: 25px;">
         <h2>map-rock?</h2>
-        <body>early february, 2023: micron pen, ink, paint marker, acrylic, water, split black tea. a map of?</body>
+        <body>early february, 2023: micron pen, ink, paint marker, acrylic, water, spilt black tea. a map of?</body>
     </div>        
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/untitled.jpg" alt="untitled">
