--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -111,8 +111,13 @@
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
 
-    <div class="essay">
+    <div class="essay", style="margin-bottom: 20px">
         <h1>Revolutionary Cultures and their Literatures: A Comparative Analysis</h1>
+    </div>
+    <div class="essay", style="margin-bottom: 10px">
+        <p class="h2">On revolution, scholarship, and methodology</p>
+    </div>
+    <div class="essay">
         <p class="indent">Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times?</p>
         <p> Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened </p>
         <p class="italic">there</p>
