heading and intro para update

--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -56,7 +56,6 @@
         
         .essay {
             font-family: 'Garamond', sans-serif;
-            margin-top: 10px;
             width: 1080px;
         }
 
@@ -84,10 +83,9 @@
             text-align: left;
         }
 
-        .essay p.h2 {
+        .essay p.bold {
             font-style: bold
             text-align: center;
-            text-align: left;
         }
 
         .essay a {
@@ -106,23 +104,18 @@
     </style>
 </head>
 <body>
-    <div class="heading-text">
+    <div class="heading-text", style="margin-bottom: 60px">
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
-
     <div class="essay", style="margin-bottom: 20px">
         <h1>Revolutionary Cultures and their Literatures: A Comparative Analysis</h1>
     </div>
     <div class="essay", style="margin-bottom: 10px">
-        <p class="h2">On revolution, scholarship, and methodology</p>
+        <p class="bold">On revolution, scholarship, and methodology</p>
     </div>
     <div class="essay">
-        <p class="indent">Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times?</p>
-        <p> Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened </p>
-        <p class="italic">there</p>
-        <p> and</p>
-        <p class="italic">then.</p>
+        <p><p class="indent">Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times?</p>Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened <p class="italic">there</p> and <p class="italic">then.</p></p>  
     </div>
 </body>
 </html>
