--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -57,6 +57,7 @@
         .essay {
             font-family: 'Garamond', sans-serif;
             width: 1080px;
+            color: #AE3179;
         }
 
         .essay h1 {
@@ -70,7 +71,6 @@
             font-size: 16px;
             color: #AE3179;
             text-align: left;
-            margin: 5px 0 0 0;
         }
 
         .essay p.italic {
