--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -13,7 +13,10 @@
             font-family: 'Pixelon';
             src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
         }
-
+        @font-face {
+            font-family: 'Garamond';
+            src: url('garamond.ttf') format('truetype');
+        }
         body {
             display: flex;
             flex-direction: column;
@@ -50,53 +53,46 @@
             text-shadow: 2px 2px #D5A454;
             text-decoration: underline;
         }
-
-        .main-image {
-            margin-top: 15px;
+        
+        .essay {
+            font-family: 'Garamond', sans-serif;
             width: 1080px;
-            height: auto;
-        }
-
-        .detail-images {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 15px;
-            width: 1080px;
-        }
-
-        .detail-images img {
-            width: calc((1080px - 15px * (var(--n) - 1)) / var(--n));
-            height: auto;
-            object-fit: cover;
-        }
-
-        .caption {
-            text-align: left;
-            font-family: 'Pixelon', sans-serif;
-            margin-top: 10px;
-            width: 1080px;
-        }
-
-        .caption h2 {
-            font-size: 32px;
             color: #AE3179;
-            text-shadow: 2px 2px #D5A454, 3.5px 3.5px #E7EFC1;
+        }
+
+        .essay h1 {
+            font-size: 30px;
+            color: #AE3179;
+            text-align: center;
             margin: 0;
         }
 
-        .caption p {
+        .essay p {
             font-size: 16px;
             color: #AE3179;
-            margin: 5px 0 0 0;
+            text-align: left;
         }
 
-        .caption a {
+        .essay .italic {
+            font-style: italic;
+        }
+
+        .essay .indent {
+            text-indent: 25px;
+        }
+
+        .essay .bold {
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .essay a {
             color: #84D6DD;
             text-shadow: 1.5px 1.5px #E7EFC1;
             text-decoration: underline;
         }
 
-        .caption a:hover {
+        .essay a:hover {
             color: #E7EFC1;
             text-shadow: 1.5px 1.5px #84D6DD;
             text-decoration: underline;
@@ -104,50 +100,18 @@
     </style>
 </head>
 <body>
-    <div class="heading-text">
+    <div class="heading-text" style="margin-bottom: 60px;">
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
-    <div class="caption" style="margin-bottom: 15px;"> 
-        <h2>revolutionary cultures and literature: a comparative study</h2>
-        <p>december, i.e. finals season, 2023: !WARNING! !VERY! !ACADEMIC! link coming later. a paper on the cultural logic of revolutions and literature's place in that. wrote this for anne o'donnell's seminar, which was a comparative analysis of the french+russian+iranian revolutions. all of the secondary sources we read were very aware of the significance of, consequences of, and ethics of the way they chose to understand what they were writing about -- i feel like that kind of meta/methodological frame of thinking leads to nice things so i took a crack at it. </p>
+    <div class="essay" style="margin-bottom: 20px;">
+        <h1>Revolutionary Cultures and their Literatures: A Comparative Analysis</h1>
     </div>
-    <div class="caption" style="margin-bottom: 15px;"> 
-        <h2>these diasporic feet</h2>
-        <p>december, i.e. finals season, 2023: mid poetry on some acrylic. what i made to round off the semester for sukhdev sandhu's class on the histories and literatures of the south asian diaspora. i feel like the class sensitized me to appreciating the poetics of certain *sorts of life* (in this case, diasporic ones) in art.</p>
+    <div class="essay" style="margin-bottom: 10px;">
+        <p class="bold">On revolution, scholarship, and methodology</p>
     </div>
-    <div class="caption" style="margin-bottom: 15px;">
-        <p>if i had to pick 3 things to recommend you take a look at from sukhdev's syllabus (and imma shy away from the classics so that the recs are interesting), i'd go with david dabydeen's <a href="https://www.goodreads.com/en/book/show/706270" class="link-element" target="_blank">The Counting House:</a> i think what i fucked with about this book is what a lot of readers find jarring about it, which is some combination of the rawness of the language (it's largely written in guyanese creole) and the vulgarity of the characters. as dabydeen himself puts it, "out of this matrix of spirit and earth is born a language that is both lyrical and barbaric" (check out "On Not Being Milton: N-- Talk In England Today"). looking back at / reading / reconstructing india through this language -- one born out of turbulent relocations and the violence of plantation life -- opened up the world of possibilities of what it can mean to think diasporically for me.</p>
-    </div>
-    <div class="caption" style="margin-bottom: 15px;">
-        <p>for the expensive pick (no sailing the high seas, as they say, for this one), i'd check out himali singh son's <a href="https://www.himalisinghsoin.com/we-are-opposite-like-that" class="link-element" target="_blank">we are opposite like that.</a> i don't have anything deep to say about this one, the project speaks for itself. imagine finding an old notebook-almanac-atlas full of poems. but desi. but polar? no way you're not enjoying leafing through that.</p>
-    </div>
-    <div class="caption" style="margin-bottom: 15px;">
-        <p>hari kunzru's <a href="https://www.goodreads.com/book/show/429653.Transmission" class="link-element" target="_blank">Transmission</a> i also fuck with. accidental yoda syntax there for some reason. it's attuned the poetics of the digital in a way i haven't seen before.</p>
-    </div>
-    <div class="caption" style="margin-bottom: 15px;">
-        <p> well i know i said 3 but i guess it's gonna be like 4 3/4 with the dabydeen essay sidebar and this..... check out philip scheffner's <a href="https://www.filmgalerie451.de/en/films/the-halfmoon-files" class="link-element" target="_blank">The Halfmoon Files!</a> or if that's too much and you speak punjabi then <a href="https://www.youtube.com/watch?v=DwZgboaU484" class="link-element" target="_blank">listen to this.</a> how many ghosts do humanity's modern endeavors create?</p>
-    </div>
-    <div class="caption" style="margin-bottom: 15px;">
-        <p>anyway, this is supposed to be a blurb about "these diasporic feet." tbh i wasn't gonna put this on the website because the time constraint just meant that i didn't get to set with the project for as long as i might have liked. plus i didn't have a proper adhesive to attach the paper to the painting so it just looks janky and i am by no means a poet (or anything at all really, but especially a not a poet). but anyway, this site is good bc it settles for mediocrity! and i think the project represents an important moment in my art, in that -- although it was rushed and done in a time that turns you into the academic analogue of the "automatic motor in a fractional operation" -- it was important in that it's one of my first "artistic" (if it qualifies) reflections on diasporic life. that's kind of what i wanna be doing -- making art that feels it way through life lived in the diaspora, life lived in a globalized capitalist world, life lived in urban/suburban spaces. my confidence about posting this was also increased by someone telling me "i tried sniffing this to get high" -- it didn't work though :(</p>
-    </div>
-    <div class="caption" style="margin-bottom: 15px;">
-        <p>so, i wrote these mid poems where i imagine my feet to have their own consciousness and write from their perspective, and feel their way through diasporic life. shoutout to sukhdev sandhu for taking me there.</p>
-    </div>
-    <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet1.png" alt="intro">
-        <img src="/thevillage-2024/diasporic_feet2.jpg" alt="intro ctd">
-    </div>
-    <div class="detail-images" style="--n: 2;">
-        <img src="/thevillage-2024/diasporic_feet3.jpg" alt="work">
-        <img src="/thevillage-2024/diasporic_feet4.jpg" alt="asian overdrive">
-    </div>
-    <div class="detail-images" style="--n: 1;">
-        <img src="/thevillage-2024/diasporic_feet5.jpg" alt="work">
-    </div>    
-    <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
-        <img src="/thevillage-2024/diasporic_feet6.jpg" alt="expressive feet">
-        <img src="/thevillage-2024/diasporic_feet7.jpg" alt="feelin good">
+    <div class="essay">
+        <p class="indent">Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times? Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened <span class="italic">there</span> and <span class="italic">then</span>.</p>
     </div>
 </body>
 </html>
