--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -108,10 +108,10 @@
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
-    <div class="essay", style="margin-bottom: 20px">
+    <div class="essay">
         <h1>Revolutionary Cultures and their Literatures: A Comparative Analysis</h1>
     </div>
-    <div class="essay", style="margin-bottom: 10px">
+    <div class="essay">
         <p class="bold">On revolution, scholarship, and methodology</p>
     </div>
     <div class="essay">
