first section, no encoded margins

--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -16,7 +16,7 @@
         @font-face {
             font-family: 'Garamond';
             src: url('garamond.ttf') format('truetype');
-        }         
+        }
         body {
             display: flex;
             flex-direction: column;
@@ -67,24 +67,22 @@
             margin: 0;
         }
 
-        .essay p.body {
+        .essay p {
             font-size: 16px;
             color: #AE3179;
             text-align: left;
         }
 
-        .essay p.italic {
+        .essay .italic {
             font-style: italic;
-            text-align: left;
         }
 
-        .essay p.indent {
+        .essay .indent {
             text-indent: 25px;
-            text-align: left;
         }
 
-        .essay p.bold {
-            font-style: bold
+        .essay .bold {
+            font-weight: bold;
             text-align: center;
         }
 
@@ -92,19 +90,17 @@
             color: #84D6DD;
             text-shadow: 1.5px 1.5px #E7EFC1;
             text-decoration: underline;
-            text-align: left;
         }
 
         .essay a:hover {
             color: #E7EFC1;
             text-shadow: 1.5px 1.5px #84D6DD;
             text-decoration: underline;
-            text-align: left;
         }
     </style>
 </head>
 <body>
-    <div class="heading-text", style="margin-bottom: 60px">
+    <div class="heading-text" style="margin-bottom: 60px;">
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
@@ -115,7 +111,26 @@
         <p class="bold">On revolution, scholarship, and methodology</p>
     </div>
     <div class="essay">
-        <p><p class="indent">Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times?</p>Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened <p class="italic">there</p> and <p class="italic">then.</p></p>  
+        <p class="indent">
+            Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times? Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened <span class="italic">there</span> and <span class="italic">then</span>.
+        </p>
+    </div>
+    <div class="essay">
+        <p class="indent">
+            Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times? Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened <span class="italic">there</span> and <span class="italic">then</span>.
+        </p>
+        <p class="indent">
+            Alexis de Tocqueville (1856) noted that as the old feudal order deteriorated, the English nobility assumed tax “burdens in order to enjoy the power of governing; here [in France] they steadily refused to pay taxes, as their only consolation for the loss of political power” (125), leading to the dissatisfaction of a wide variety of classes forced into bearing the weight of archaic feudal structures nothing in return. For Hannah Arendt (1963), revolutions could not happen without the addition of the imagination of a post-scarcity New World to the western canon. For Karl Marx and Frederick Engels (1858), revolutions could not happen without a suitably antagonistic relationship between two classes. Charles Kurzman’s (2004) account of the Iranian revolution is in terms of “viability:” the reason it reached the critical mass of demonstrators involved was because of a (contingent) public perception of the revolutionary movement as viable.              
+        </p>
+        <p class="indent">
+            Whereas all these scholarly approaches to revolution may seem very different – Tocqueville and Marx focus on class relations; Kurzman denies the assumption that revolutions are written in inevitable sociological forces and provides an “anti-explanation” (5) of revolution as being contingent on people’s experiences and perceptions; Arendt is concerned with where the imagination of revolution comes from – they still share this fundamental similarity. As shown by Kurzman’s case, the question is not necessarily: why did it have to be there and then? For him, it didn’t. The questions are: why there? Why then?               
+        </p>
+        <p class="indent">
+            The approach here does not seek to answer such questions, though it does not seek to discount their importance in any way. Instead, it looks to identify the characteristics of and differences between revolutionary cultures (particularly in their relationship with literature) in France and in Russia. It is an examination of the merits of several possible accounts on the nature of cultural paradigms, rather than an attempt at one causal explanation (though could potentially be put into conversation with the latter). It is an approach that conceives of those at the forefront of the revolution – its leaders and primary actors – as a cultural group with its own set of practices and internal logic worth understanding (and potentially, as only being understandable through multiple different accounts.)
+        </p>
+    </div>
+    <div class="essay">
+        <p class="bold">Literature as describing what should be enacted</p>
     </div>
 </body>
 </html>
